# osupp

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: osupp-config.cmake.in
examples/: main.cpp
include/osupp/: beatmap.hpp  common.hpp  error.hpp  osupp.hpp  replay.hpp
scripts/: make_example_osr.py
src/: beatmap_parse.cpp  beatmap_write.cpp  replay_parse.cpp  replay_write.cpp
src/detail/: binary_io.hpp  lzma.cpp  lzma.hpp  string_utils.hpp
tests/: beatmap_tests.cpp  replay_tests.cpp
tests/data/: example.osr  example.osu
